# mindgames_NeurIPS2025

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: mafia_benchmark.json  test.py
src/: config.py  offline_play.py  requirements.txt  utils.py
src/agents/: README.md  __init__.py  base.py  judge_agent.py  revac.py  revac2_1.py  revac8.py  schemas.py
src/prompts/: revac2_1_prompts.py  revac8_prompts.py  revac_prompts.py  system_prompts.py
