[project]
name = "mindgames-neurips"
version = "0.1.0"
description = "mindgames"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-core==0.3.76",
    "langchain-groq==0.3.8",
    "langchain-openai==0.3.33",
    "pandas>=2.3.3",
    "supabase>=2.24.0",
    "textarena>=0.7.4",
]
